Adding Cleaned Degree Data

--- a/data.ipynb
+++ b/data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "source": [
     "#file path for initial data frame \r\n",
     "\r\n",
@@ -288,7 +288,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 24
     }
    ],
    "metadata": {}
@@ -986,34 +986,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "source": [
     "#deleting rows that do not contain Bachelors\r\n",
-    "df.columns"
+    "# df.columns"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Index([                        'Sector',                    'Institution',\n",
-       "                      'Discipline Area', 'Level of Degree or Certificate',\n",
-       "                                   2002,                             2003,\n",
-       "                                   2004,                             2005,\n",
-       "                                   2006,                             2007,\n",
-       "                                   2008,                             2009,\n",
-       "                                   2010,                             2011,\n",
-       "                                   2012,                             2013,\n",
-       "                                   2014,                             2015,\n",
-       "                                   2016,                             2017,\n",
-       "                                   2018],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -1242,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "source": [
     "#making sure I have degrees desired for analysis \r\n",
     "df[\"Level of Degree or Certificate\"].value_counts()"
@@ -1258,14 +1236,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 19
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "source": [
     "#Checking if there are errors in Discipline Area \r\n",
     "\r\n",
@@ -1291,7 +1269,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 18
     }
    ],
    "metadata": {}
@@ -1305,8 +1283,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 17,
+   "source": [
+    "#checking for variances in Institution name \r\n",
+    "\r\n",
+    "df[\"Institution\"].value_counts()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Ohio State University                                   444\n",
+       "University of Cincinnati                                399\n",
+       "University of Akron                                     373\n",
+       "Bowling Green State University                          359\n",
+       "Ohio University                                         341\n",
+       "                                                       ... \n",
+       "GOOD SAMARITAN COLLEGE OF NURSING AND HEALTH SCIENCE      1\n",
+       "CHAMBERLAIN UNIVERSITY-OHIO                               1\n",
+       "AULTMAN COLLEGE OF NURSING AND HEALTH SCIENCES            1\n",
+       "CHAMBERLAIN COLLEGE OF NURSING–COLUMBUS CAMPUS            1\n",
+       "CHAMBERLAIN COLLEGE OF NURSING-OHIO                       1\n",
+       "Name: Institution, Length: 144, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "source": [
+    "#replacing St Joseph institution name\r\n",
+    "\r\n",
+    "df[\"Institution\"].replace({\"COLLEGE OF MOUNT ST. JOSEPH\" : \"COLLEGE OF MOUNT ST JOSEPH\"})\r\n",
+    "df.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sector</th>\n",
+       "      <th>Institution</th>\n",
+       "      <th>Discipline Area</th>\n",
+       "      <th>Level of Degree or Certificate</th>\n",
+       "      <th>2002</th>\n",
+       "      <th>2003</th>\n",
+       "      <th>2004</th>\n",
+       "      <th>2005</th>\n",
+       "      <th>2006</th>\n",
+       "      <th>2007</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2009</th>\n",
+       "      <th>2010</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1923</th>\n",
+       "      <td>Private Not-for-Profit</td>\n",
+       "      <td>ALLEGHENY WESLEYAN COLLEGE</td>\n",
+       "      <td>Arts &amp; Humanities</td>\n",
+       "      <td>Bachelor's Degree</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1924</th>\n",
+       "      <td>Private Not-for-Profit</td>\n",
+       "      <td>ANTIOCH COLLEGE</td>\n",
+       "      <td>Arts &amp; Humanities</td>\n",
+       "      <td>Bachelor's Degree</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1925</th>\n",
+       "      <td>Private Not-for-Profit</td>\n",
+       "      <td>ANTIOCH COLLEGE</td>\n",
+       "      <td>Arts &amp; Humanities</td>\n",
+       "      <td>Bachelor's Degree</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1926</th>\n",
+       "      <td>Private Not-for-Profit</td>\n",
+       "      <td>ANTIOCH COLLEGE</td>\n",
+       "      <td>Arts &amp; Humanities</td>\n",
+       "      <td>Bachelor's Degree</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1927</th>\n",
+       "      <td>Private Not-for-Profit</td>\n",
+       "      <td>ANTIOCH COLLEGE</td>\n",
+       "      <td>Arts &amp; Humanities</td>\n",
+       "      <td>Bachelor's Degree</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Sector                 Institution    Discipline Area  \\\n",
+       "1923  Private Not-for-Profit  ALLEGHENY WESLEYAN COLLEGE  Arts & Humanities   \n",
+       "1924  Private Not-for-Profit             ANTIOCH COLLEGE  Arts & Humanities   \n",
+       "1925  Private Not-for-Profit             ANTIOCH COLLEGE  Arts & Humanities   \n",
+       "1926  Private Not-for-Profit             ANTIOCH COLLEGE  Arts & Humanities   \n",
+       "1927  Private Not-for-Profit             ANTIOCH COLLEGE  Arts & Humanities   \n",
+       "\n",
+       "     Level of Degree or Certificate  2002  2003  2004  2005  2006  2007  ...  \\\n",
+       "1923              Bachelor's Degree     6    13     6     6     4     6  ...   \n",
+       "1924              Bachelor's Degree    19     3     0     0     0     0  ...   \n",
+       "1925              Bachelor's Degree     8     7     0     0     0     0  ...   \n",
+       "1926              Bachelor's Degree     0     1     0     0     0     0  ...   \n",
+       "1927              Bachelor's Degree     2     3     0     0     0     0  ...   \n",
+       "\n",
+       "      2009  2010  2011  2012  2013  2014  2015  2016  2017  2018  \n",
+       "1923     3     5     6     0     0     0     0     0     0     0  \n",
+       "1924     0     0     0     0     0     0     0     0     0     0  \n",
+       "1925     0     0     0     0     0     0     0     0     0     0  \n",
+       "1926     0     0     0     0     0     0     0     0     0     0  \n",
+       "1927     0     0     0     0     0     0     0     0     0     0  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "source": [
+    "#saving final cleaned degree data \r\n",
+    "\r\n",
+    "df.to_excel (\"Resources/FinalDegreeData.xlsx\" , index=False)\r\n"
+   ],
    "outputs": [],
    "metadata": {}
   }
