Beginning Poverty Data Clean

--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "source": [
     "#Cleaning data although degree data is relatively clean with pandas \r\n",
     "import pandas as pd \r\n"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "source": [
     "#file path for initial data frame \r\n",
     "\r\n",
@@ -288,16 +288,235 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 22
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "source": [
-    "#file path for initial data frame \r\n",
+    "# renaming columns \r\n",
+    "\r\n",
+    "inc_pov_df = inc_pov_df.rename(columns={\"Year\": \"Year\", \"State / County Name\": \"State and County\", \"All Ages in Poverty Percent\": \"Poverty Percentage\", \"Median Household Income in Dollars\": \"Median Household Income\"})\r\n",
+    "# inc_pov_df.head()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "source": [
+    "#Grabbing needed poverty rate columns \r\n",
+    "\r\n",
+    "new_inc = inc_pov_df[[\"Year\", \"State\", \"County ID\", \"State and County\", \"Poverty Percentage\", \"Median Household Income\"]]\r\n",
+    "new_inc.head()\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>State</th>\n",
+       "      <th>County ID</th>\n",
+       "      <th>State and County</th>\n",
+       "      <th>Poverty Percentage</th>\n",
+       "      <th>Median Household Income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>12.3</td>\n",
+       "      <td>$65,712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>$61,937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>13.4</td>\n",
+       "      <td>$60,336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>$57,617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>$55,775</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  State  County ID State and County  Poverty Percentage  \\\n",
+       "0  2019      0          0    United States                12.3   \n",
+       "1  2018      0          0    United States                13.1   \n",
+       "2  2017      0          0    United States                13.4   \n",
+       "3  2016      0          0    United States                14.0   \n",
+       "4  2015      0          0    United States                14.7   \n",
+       "\n",
+       "  Median Household Income  \n",
+       "0                $65,712   \n",
+       "1                $61,937   \n",
+       "2                $60,336   \n",
+       "3                $57,617   \n",
+       "4                $55,775   "
+      ]
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "source": [
+    "#Removing state and county ID as they are not needed\r\n",
+    "\r\n",
+    "drop_new_inc = new_inc.drop(columns=[\"State\", \"County ID\"])\r\n",
+    "\r\n",
+    "\r\n",
+    "drop_new_inc.head()\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>State and County</th>\n",
+       "      <th>Poverty Percentage</th>\n",
+       "      <th>Median Household Income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>12.3</td>\n",
+       "      <td>$65,712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>$61,937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>13.4</td>\n",
+       "      <td>$60,336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>$57,617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>$55,775</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year State and County  Poverty Percentage Median Household Income\n",
+       "0  2019    United States                12.3                $65,712 \n",
+       "1  2018    United States                13.1                $61,937 \n",
+       "2  2017    United States                13.4                $60,336 \n",
+       "3  2016    United States                14.0                $57,617 \n",
+       "4  2015    United States                14.7                $55,775 "
+      ]
+     },
+     "metadata": {},
+     "execution_count": 58
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "source": [
+    "#file path for initial  degrees data frame \r\n",
     "\r\n",
     "file = \"Resources/Degrees By Subject Clean.xlsx\"\r\n",
     "\r\n",
@@ -517,14 +736,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 59
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "source": [
     "#dropping subject field as it is not needed for analysis \r\n",
     "\r\n",
@@ -729,14 +948,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 25
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "source": [
     "#drop rows if entire row is zero \r\n",
     "\r\n",
@@ -941,14 +1160,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 26
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "source": [
     "#getting degree options to clean \r\n",
     "\r\n",
@@ -979,16 +1198,16 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 27
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "source": [
-    "#deleting rows that do not contain Bachelors\r\n",
+    "#deleting rows that do not contain Bachelors or Masters\r\n",
     "# df.columns"
    ],
    "outputs": [],
@@ -996,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "source": [
     "df.drop(df[df[\"Level of Degree or Certificate\"] == \"Associate Degree\"].index, inplace=True)\r\n",
     "df.drop(df[df[\"Level of Degree or Certificate\"] == \"One to less than Two-Year Award\"].index, inplace=True)\r\n",
@@ -1213,14 +1432,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 29
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "source": [
     "#making sure I have degrees desired for analysis \r\n",
     "df[\"Level of Degree or Certificate\"].value_counts()"
@@ -1236,14 +1455,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 30
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "source": [
     "#Checking if there are errors in Discipline Area \r\n",
     "\r\n",
@@ -1269,7 +1488,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 31
     }
    ],
    "metadata": {}
@@ -1283,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "source": [
     "#checking for variances in Institution name \r\n",
     "\r\n",
@@ -1309,14 +1528,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 32
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "source": [
     "#replacing St Joseph institution name\r\n",
     "\r\n",
@@ -1521,14 +1740,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 33
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "source": [
     "#saving final cleaned degree data \r\n",
     "\r\n",
