Cleaned Employment Data

--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "source": [
     "#Cleaning data although degree data is relatively clean with pandas \r\n",
     "import pandas as pd \r\n"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "source": [
     "#file path for initial data frame \r\n",
     "\r\n",
@@ -86,7 +86,7 @@
        "      <td>17.9</td>\n",
        "      <td>18.5</td>\n",
        "      <td>17.9 to 18.5</td>\n",
-       "      <td>$65,712</td>\n",
+       "      <td>65712</td>\n",
        "      <td>$65,594</td>\n",
        "      <td>$65,830</td>\n",
        "      <td>$65,594 to $65,830</td>\n",
@@ -110,7 +110,7 @@
        "      <td>19.3</td>\n",
        "      <td>19.7</td>\n",
        "      <td>19.3 to 19.7</td>\n",
-       "      <td>$61,937</td>\n",
+       "      <td>61937</td>\n",
        "      <td>$61,843</td>\n",
        "      <td>$62,031</td>\n",
        "      <td>$61,843 to $62,031</td>\n",
@@ -134,7 +134,7 @@
        "      <td>19.9</td>\n",
        "      <td>20.5</td>\n",
        "      <td>19.9 to 20.5</td>\n",
-       "      <td>$60,336</td>\n",
+       "      <td>60336</td>\n",
        "      <td>$60,250</td>\n",
        "      <td>$60,422</td>\n",
        "      <td>$60,250 to $60,422</td>\n",
@@ -158,7 +158,7 @@
        "      <td>21.1</td>\n",
        "      <td>21.5</td>\n",
        "      <td>21.1 to 21.5</td>\n",
-       "      <td>$57,617</td>\n",
+       "      <td>57617</td>\n",
        "      <td>$57,502</td>\n",
        "      <td>$57,732</td>\n",
        "      <td>$57,502 to $57,732</td>\n",
@@ -182,7 +182,7 @@
        "      <td>22.5</td>\n",
        "      <td>23.1</td>\n",
        "      <td>22.5 to 23.1</td>\n",
-       "      <td>$55,775</td>\n",
+       "      <td>55775</td>\n",
        "      <td>$55,690</td>\n",
        "      <td>$55,860</td>\n",
        "      <td>$55,690 to $55,860</td>\n",
@@ -257,11 +257,11 @@
        "4                                       22.5 to 23.1         \n",
        "\n",
        "  Median Household Income in Dollars  \\\n",
-       "0                           $65,712    \n",
-       "1                           $61,937    \n",
-       "2                           $60,336    \n",
-       "3                           $57,617    \n",
-       "4                           $55,775    \n",
+       "0                              65712   \n",
+       "1                              61937   \n",
+       "2                              60336   \n",
+       "3                              57617   \n",
+       "4                              55775   \n",
        "\n",
        "  Median Household Income in Dollars LB 90%  \\\n",
        "0                                  $65,594    \n",
@@ -288,14 +288,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "source": [
     "# renaming columns \r\n",
     "\r\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "source": [
     "#Grabbing needed poverty rate columns \r\n",
     "\r\n",
@@ -353,7 +353,7 @@
        "      <td>0</td>\n",
        "      <td>United States</td>\n",
        "      <td>12.3</td>\n",
-       "      <td>$65,712</td>\n",
+       "      <td>65712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -362,7 +362,7 @@
        "      <td>0</td>\n",
        "      <td>United States</td>\n",
        "      <td>13.1</td>\n",
-       "      <td>$61,937</td>\n",
+       "      <td>61937</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -371,7 +371,7 @@
        "      <td>0</td>\n",
        "      <td>United States</td>\n",
        "      <td>13.4</td>\n",
-       "      <td>$60,336</td>\n",
+       "      <td>60336</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -380,7 +380,7 @@
        "      <td>0</td>\n",
        "      <td>United States</td>\n",
        "      <td>14.0</td>\n",
-       "      <td>$57,617</td>\n",
+       "      <td>57617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -389,7 +389,7 @@
        "      <td>0</td>\n",
        "      <td>United States</td>\n",
        "      <td>14.7</td>\n",
-       "      <td>$55,775</td>\n",
+       "      <td>55775</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -403,30 +403,30 @@
        "3  2016      0          0    United States                14.0   \n",
        "4  2015      0          0    United States                14.7   \n",
        "\n",
-       "  Median Household Income  \n",
-       "0                $65,712   \n",
-       "1                $61,937   \n",
-       "2                $60,336   \n",
-       "3                $57,617   \n",
-       "4                $55,775   "
+       "   Median Household Income  \n",
+       "0                    65712  \n",
+       "1                    61937  \n",
+       "2                    60336  \n",
+       "3                    57617  \n",
+       "4                    55775  "
       ]
      },
      "metadata": {},
-     "execution_count": 48
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "source": [
     "#Removing state and county ID as they are not needed\r\n",
     "\r\n",
     "drop_new_inc = new_inc.drop(columns=[\"State\", \"County ID\"])\r\n",
     "\r\n",
     "\r\n",
-    "drop_new_inc.head()\r\n"
+    "drop_new_inc\r\n"
    ],
    "outputs": [
     {
@@ -463,58 +463,120 @@
        "      <td>2019</td>\n",
        "      <td>United States</td>\n",
        "      <td>12.3</td>\n",
-       "      <td>$65,712</td>\n",
+       "      <td>65712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2018</td>\n",
        "      <td>United States</td>\n",
        "      <td>13.1</td>\n",
-       "      <td>$61,937</td>\n",
+       "      <td>61937</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2017</td>\n",
        "      <td>United States</td>\n",
        "      <td>13.4</td>\n",
-       "      <td>$60,336</td>\n",
+       "      <td>60336</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2016</td>\n",
        "      <td>United States</td>\n",
        "      <td>14.0</td>\n",
-       "      <td>$57,617</td>\n",
+       "      <td>57617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2015</td>\n",
        "      <td>United States</td>\n",
        "      <td>14.7</td>\n",
-       "      <td>$55,775</td>\n",
+       "      <td>55775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1615</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>Wyandot County</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>44482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1616</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>Wyandot County</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>43113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1617</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Wyandot County</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>42428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1618</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>Wyandot County</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>40819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1619</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>Wyandot County</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>39216</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1620 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year State and County  Poverty Percentage Median Household Income\n",
-       "0  2019    United States                12.3                $65,712 \n",
-       "1  2018    United States                13.1                $61,937 \n",
-       "2  2017    United States                13.4                $60,336 \n",
-       "3  2016    United States                14.0                $57,617 \n",
-       "4  2015    United States                14.7                $55,775 "
+       "      Year State and County  Poverty Percentage  Median Household Income\n",
+       "0     2019    United States                12.3                    65712\n",
+       "1     2018    United States                13.1                    61937\n",
+       "2     2017    United States                13.4                    60336\n",
+       "3     2016    United States                14.0                    57617\n",
+       "4     2015    United States                14.7                    55775\n",
+       "...    ...              ...                 ...                      ...\n",
+       "1615  2006   Wyandot County                 8.0                    44482\n",
+       "1616  2005   Wyandot County                 6.8                    43113\n",
+       "1617  2004   Wyandot County                 6.6                    42428\n",
+       "1618  2003   Wyandot County                 6.3                    40819\n",
+       "1619  2002   Wyandot County                 6.7                    39216\n",
+       "\n",
+       "[1620 rows x 4 columns]"
       ]
      },
      "metadata": {},
-     "execution_count": 58
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
+   "source": [
+    "#saving final employment rate / median income file \r\n",
+    "\r\n",
+    "drop_new_inc.to_csv(\"Resources/FinalEmployment&Income.csv\")"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "source": [
     "#file path for initial  degrees data frame \r\n",
     "\r\n",
@@ -736,14 +798,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 59
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "source": [
     "#dropping subject field as it is not needed for analysis \r\n",
     "\r\n",
@@ -948,14 +1010,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "source": [
     "#drop rows if entire row is zero \r\n",
     "\r\n",
@@ -1160,14 +1222,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "source": [
     "#getting degree options to clean \r\n",
     "\r\n",
@@ -1198,14 +1260,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "source": [
     "#deleting rows that do not contain Bachelors or Masters\r\n",
     "# df.columns"
@@ -1215,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "source": [
     "df.drop(df[df[\"Level of Degree or Certificate\"] == \"Associate Degree\"].index, inplace=True)\r\n",
     "df.drop(df[df[\"Level of Degree or Certificate\"] == \"One to less than Two-Year Award\"].index, inplace=True)\r\n",
@@ -1432,14 +1494,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "source": [
     "#making sure I have degrees desired for analysis \r\n",
     "df[\"Level of Degree or Certificate\"].value_counts()"
@@ -1455,14 +1517,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "source": [
     "#Checking if there are errors in Discipline Area \r\n",
     "\r\n",
@@ -1488,7 +1550,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 13
     }
    ],
    "metadata": {}
@@ -1502,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "source": [
     "#checking for variances in Institution name \r\n",
     "\r\n",
@@ -1528,14 +1590,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 14
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "source": [
     "#replacing St Joseph institution name\r\n",
     "\r\n",
@@ -1740,14 +1802,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "source": [
     "#saving final cleaned degree data \r\n",
     "\r\n",
